--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Infrastructure</h1><br><p class="p-c-p">Building Infrastructures that will help people and our country.</p></div>
         <div class="pillar-c"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Empowerment</h1><br><p class="p-c-p">Empowering those people who actually deserve.</p></div>
     </div>
+    <div class="vision">
+        <h1 class="vision-title"></h1>
+        <div class="v-c"></div>
+        <div class="v-c"></div>
+        <div class="v-c"></div>
+    </div>
     <div class="yunus-speech"><p class="y-s-p">"We aim to establish effective safeguard mechanisms to ensure the sustainability of these reforms and create an enabling environment towards conduct of free, fair and participatory elections."</p><br><h1 class="y-s-n">Dr. Muhammad Yunus</h1><br><p class="y-s-d">Chief Advisor of the People's Republic Of Bangladesh</p></div>
     <div class="news"></div>
     <div class="news-c"></div>
