--- a/index.html
+++ b/index.html
@@ -27,10 +27,11 @@
         <div class="pillar-c"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Empowerment</h1><br><p class="p-c-p">Empowering those people who actually deserve.</p></div>
     </div>
     <div class="vision">
-        <h1 class="vision-title"></h1>
-        <div class="v-c"></div>
-        <div class="v-c"></div>
-        <div class="v-c"></div>
+        <h1 class="vision-title">The Vision of Future</h1><br>
+        <p class="vision-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
+        <div class="v-c v-c-m vc1"><img src="card-icon.png" alt="" class="p-c-i2"><br></div>
+        <div class="v-c v-c-m vc2"><img src="card-icon.png" alt="" class="p-c-i2"><br></div>
+        <div class="v-c vc3"><img src="card-icon.png" alt="" class="p-c-i2"><br><button class="lm">Learn More</button></div>
     </div>
     <div class="yunus-speech"><p class="y-s-p">"We aim to establish effective safeguard mechanisms to ensure the sustainability of these reforms and create an enabling environment towards conduct of free, fair and participatory elections."</p><br><h1 class="y-s-n">Dr. Muhammad Yunus</h1><br><p class="y-s-d">Chief Advisor of the People's Republic Of Bangladesh</p></div>
     <div class="news"></div>
