--- a/index.html
+++ b/index.html
@@ -31,15 +31,20 @@
         <p class="vision-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
         <div class="v-c v-c-m vc1">
             <img src="card-icon.png" alt="" class="p-c-i2"><br>
-            <h1 class="v-c-t"></h1><br>
+            <h1 class="v-c-t">Digital Transformation</h1><br>
+            <p class="v-c-p"></p>
             <button class="lm">Learn More</button>
         </div>
         <div class="v-c v-c-m vc2">
             <img src="card-icon.png" alt="" class="p-c-i2"><br>
+            <h1 class="v-c-t">Green Energy</h1><br>
+            <p class="v-c-p"></p>
             <button class="lm">Learn More</button>
         </div>
         <div class="v-c vc3">
             <img src="card-icon.png" alt="" class="p-c-i2"><br>
+            <h1 class="v-c-t">Modern Infrastructure</h1><br>
+            <p class="v-c-p"></p>
             <button class="lm">Learn More</button>
         </div>
     </div>
