--- a/index.html
+++ b/index.html
@@ -30,22 +30,28 @@
         <h1 class="vision-title">The Vision of Future</h1><br>
         <p class="vision-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
         <div class="v-c v-c-m vc1">
+            <div class="v-c-a1">
             <img src="card-icon.png" alt="" class="p-c-i2"><br>
             <h1 class="v-c-t">Digital Transformation</h1><br>
-            <p class="v-c-p"></p>
-            <button class="lm">Learn More</button>
+            <p class="v-c-p">Creating a nationwide digital ecosystem to enhance connectivity and access to services for all citizens.</p><br>
+            </div>
+            <button class="lm lm1">Learn More</button>
         </div>
         <div class="v-c v-c-m vc2">
+            <div class="v-c-a1">
             <img src="card-icon.png" alt="" class="p-c-i2"><br>
             <h1 class="v-c-t">Green Energy</h1><br>
-            <p class="v-c-p"></p>
-            <button class="lm">Learn More</button>
+            <p class="v-c-p">Investments in solar and wind energy to ensure a sustainable and eco-friendly future.</p><br>
+            </div>
+            <button class="lm lm2">Learn More</button>
         </div>
         <div class="v-c vc3">
+            <div class="v-c-a1">
             <img src="card-icon.png" alt="" class="p-c-i2"><br>
             <h1 class="v-c-t">Modern Infrastructure</h1><br>
-            <p class="v-c-p"></p>
-            <button class="lm">Learn More</button>
+            <p class="v-c-p">Building state-of-the-art infrastructure to support economic growth and global competitiveness.</p><br>
+            </div>
+            <button class="lm lm3">Learn More</button>
         </div>
     </div>
     <div class="yunus-speech"><p class="y-s-p">"We aim to establish effective safeguard mechanisms to ensure the sustainability of these reforms and create an enabling environment towards conduct of free, fair and participatory elections."</p><br><h1 class="y-s-n">Dr. Muhammad Yunus</h1><br><p class="y-s-d">Chief Advisor of the People's Republic Of Bangladesh</p></div>
