--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="pillar">
         <h1 class="pillar-title">Pillars of "Bangladesh 2.0"</h1>
         <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Innovation</h1><br><p class="p-c-p">Supporting to innovations that will help people.</p></div>
-        <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Sustainability</h1><br><p class="p-c-p">Planning for ustainable development.</p></div>
+        <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Sustainability</h1><br><p class="p-c-p">Planning for stainable development.</p></div>
         <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Infrastructure</h1><br><p class="p-c-p">Building Infrastructures that will help people and our country.</p></div>
         <div class="pillar-c"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Empowerment</h1><br><p class="p-c-p">Empowering those people who actually deserve.</p></div>
     </div>
