--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <h1 class="h-title">Bangladesh 2.0</h1>
         <button class="sign-in">Sign In</button>
     </header>
+
     <div class="ban">
         <div class="ban-text">
         <p class="ban-p">Bangladesh 2.0</p>
@@ -19,6 +20,7 @@
     </div>
         <img src="hero.png" alt="" class="hero">
     </div>
+
     <div class="pillar">
         <h1 class="pillar-title">Pillars of "Bangladesh 2.0"</h1>
         <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Innovation</h1><br><p class="p-c-p">Supporting to innovations that will help people.</p></div>
@@ -26,6 +28,7 @@
         <div class="pillar-c p-c-m"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Infrastructure</h1><br><p class="p-c-p">Building Infrastructures that will help people and our country.</p></div>
         <div class="pillar-c"><img src="card-icon.png" alt="" class="p-c-i"><br><h1 class="p-c-t">Empowerment</h1><br><p class="p-c-p">Empowering those people who actually deserve.</p></div>
     </div>
+
     <div class="vision">
         <h1 class="vision-title">The Vision of Future</h1><br>
         <p class="vision-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p>
@@ -54,10 +57,16 @@
             <button class="lm lm3">Learn More</button>
         </div>
     </div>
+
     <div class="yunus-speech"><p class="y-s-p">"We aim to establish effective safeguard mechanisms to ensure the sustainability of these reforms and create an enabling environment towards conduct of free, fair and participatory elections."</p><br><h1 class="y-s-n">Dr. Muhammad Yunus</h1><br><p class="y-s-d">Chief Advisor of the People's Republic Of Bangladesh</p></div>
-    <div class="news"></div>
-    <div class="news-c"></div>
+    
+    <div class="news">
+        <h1 class="news-title">Recent News</h1><br>
+        <p class="news-p"></p><br>
+        <div class="news-sec1"></div>
+        <div class="news-sec2"></div>
+    </div>
+
     <div class="donate"></div>
-    <div class="ns"></div>
 </body>
 </html>
