--- a/index.html
+++ b/index.html
@@ -60,6 +60,25 @@
 
     <div class="yunus-speech"><p class="y-s-p">"We aim to establish effective safeguard mechanisms to ensure the sustainability of these reforms and create an enabling environment towards conduct of free, fair and participatory elections."</p><br><h1 class="y-s-n">Dr. Muhammad Yunus</h1><br><p class="y-s-d">Chief Advisor of the People's Republic Of Bangladesh</p></div>
     
-    <div class="donate"></div>
+    <div class="donate">
+        <h1 class="donate-title">Donate Today</h1><br>
+        <p class="donate-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure.</p><br>
+        <button class="amount-b amount-b-a">100 Taka</button>
+        <button class="amount-b">200 Taka</button>
+        <button class="amount-b">500 Taka</button>
+        <button class="amount-b">1000 Taka</button><br>
+        <input type="text" id="taka-in" placeholder="Other Amount (Taka)"><br>
+        <input type="submit" value="Done now" class="done-now">
+    </div>
+
+    <div class="snl">
+        <form action="" class="snl-form">
+            <h1 class="snl-title">Subscribe Newsletter</h1><br>
+            <p class="snl-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth.</p><br>
+            <input type="text" id="snl-in" placeholder="Enter your email here">
+            <input type="submit" value="Subscribe" class="snl-sub">
+            <p class="snl-p2">We promise not to spam you!</p>
+        </form>
+    </div>
 </body>
 </html>
