--- a/index.html
+++ b/index.html
@@ -59,6 +59,39 @@
     </div>
 
     <div class="yunus-speech"><p class="y-s-p">"We aim to establish effective safeguard mechanisms to ensure the sustainability of these reforms and create an enabling environment towards conduct of free, fair and participatory elections."</p><br><h1 class="y-s-n">Dr. Muhammad Yunus</h1><br><p class="y-s-d">Chief Advisor of the People's Republic Of Bangladesh</p></div>
+
+    <div class="news">
+        <h1 class="news-title">Recent News</h1><br>
+        <p class="news-p">Bangladesh 2.0 aims to redefine the nation's trajectory by embracing cutting-edge technology, promoting inclusive growth, and ensuring sustainability. With initiatives in renewable energy, digital transformation, and robust infrastructure, the country is set to become a global model of development.</p><br>
+        
+        <div class="news-c1">
+            <div class="n-c1-s1">
+            <img src="satelite.png" alt="" style="border-radius: 24px;">
+        </div>
+        <div class="n-c1-s2">
+            <h1 class="n-c1-title">Bangladesh Launches New Satellite</h1>
+            <img src="al-jazeera.png" alt="" class="al-jz">
+            <p class=" dt">Date: 05/01/2025    Time: 10.25 PM</p>
+            <p class="n-c1-p">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                with a certain degree of justification, be able to speak of humankind as civilized</p>
+                <button class="rm">Read More</button>
+        </div>
+        </div>
+    </div>
+
+    <div class="news-c2">
+        <div class="n-c2-s1">
+            <h1 class="n-c2-title">Bangladesh Launches New Satellite</h1>
+            <img src="al-jazeera.png" alt="" class="al-jz">
+            <p class=" dt">Date: 05/01/2025    Time: 10.25 PM</p>
+            <p class="n-c2-p">Not until the creation and maintenance of decent conditions of life for all people are recognized and accepted as a common obligation of all people and all countries—not until then shall we,
+                with a certain degree of justification, be able to speak of humankind as civilized</p>
+            <button class="rm">Read More</button>
+        </div>
+        <div class="n-c2-s2">
+            <img src="satelite.png" alt="" style="border-radius: 28px;">
+        </div>
+    </div>
     
     <div class="donate">
         <h1 class="donate-title">Donate Today</h1><br>
